fix safari hidden header issue (not support visibility:collapse)

--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -200,8 +200,11 @@
 
 .root:not([data-header]) thead{
     visibility: collapse;
-    height: 0;
-    overflow: -webkit-paged-y;
+
+    th{
+        height: 0;
+        overflow: -webkit-paged-y;
+    }
 }
 
 .root table {
